--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -679,6 +678,7 @@
                                 <connections>
                                     <outlet property="artistImage" destination="Fv7-qL-GNB" id="zsu-Ci-8Is"/>
                                     <outlet property="lbArtist" destination="rrR-JI-Nbn" id="1eu-K4-cJ0"/>
+                                    <segue destination="kEK-8t-cMN" kind="push" identifier="artistSegue" id="xs3-tS-j7o"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="albumCell" rowHeight="75" id="jJM-7i-dHc" customClass="AlbumCell">
@@ -919,6 +919,7 @@
                                 <connections>
                                     <outlet property="artistImage" destination="5pH-ul-xoP" id="nGC-13-rFu"/>
                                     <outlet property="lbArtist" destination="tKs-UV-1MZ" id="Xye-vQ-3hn"/>
+                                    <segue destination="kEK-8t-cMN" kind="push" identifier="artistSegue" id="NuT-8v-2Lx"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="loadingMoreArtists" rowHeight="40" id="Wbs-2Y-ylS" customClass="LoadMoreCell">
@@ -959,6 +960,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q5G-c0-rPE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5030" y="-252"/>
+        </scene>
+        <!--Artist View Controller-->
+        <scene sceneID="bBE-ER-0Sa">
+            <objects>
+                <tableViewController id="kEK-8t-cMN" customClass="ArtistViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="erB-7v-ORh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <imageView key="tableHeaderView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="OQ4-Fu-3LC">
+                            <rect key="frame" x="0.0" y="64" width="320" height="320"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ong-Dd-hZX">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ong-Dd-hZX" id="b2q-2P-fio">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="kEK-8t-cMN" id="zc9-og-pfI"/>
+                            <outlet property="delegate" destination="kEK-8t-cMN" id="lrM-vt-yT1"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="uj6-Zi-Nyz"/>
+                    <connections>
+                        <outlet property="artistPortraitBackground" destination="OQ4-Fu-3LC" id="H7F-3j-Wcq"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NIi-4g-uqr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5516" y="-255"/>
         </scene>
         <!--All Albums View Controller-->
         <scene sceneID="T9z-gd-vft">
@@ -1234,5 +1269,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="i1N-E3-qx4"/>
+        <segue reference="xs3-tS-j7o"/>
     </inferredMetricsTieBreakers>
 </document>
